Fix problem with tree view scrollbar rendering incorrectly

--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -33,6 +33,9 @@
         width: 8px;
     }
 }
+.tree-view-scroller {
+    transform: translate3d(0, 0, 0);
+}
 .focusable-panel {
     opacity: 1;
 
